--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.45.1
-numpy==1.26.1
-pandas==2.0.3
-scikit-learn==1.2.2
-joblib==1.3.1
-matplotlib==3.7.1
-seaborn==0.13.2
+numpy==1.27.1
+pandas
+scikit-learn
+matplotlib
+seaborn
+# add other dependencies you need below
