--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,29 @@
-# Core
-python-dotenv
+# Core framework
 streamlit==1.45.1
-pandas==2.2.3
+python-dotenv
+
+# Data science
 numpy==1.26.4
+pandas==2.2.3
 scikit-learn==1.4.2
 scipy==1.13.1
 matplotlib==3.8.4
 seaborn==0.13.2
 plotly==6.2.0
-opencv-python==4.11.0.86
+
+# CV and Image support
+opencv-python==4.9.0.80
 Pillow==11.1.0
 
-# Streamlit components
+# Streamlit add-ons
 streamlit-camera-input-live==0.2.0
 streamlit-drawable-canvas==0.9.3
-streamlit-embedcode==0.1.2
-streamlit-extras==0.6.0
 streamlit-image-coordinates==0.1.9
-streamlit-keyup==0.3.0
-streamlit-pills==0.3.0
 streamlit-toggle-switch==1.0.2
-streamlit-tree-select==0.0.5
-streamlit-vertical-slider==2.5.5
+streamlit-extras==0.6.0
 streamlit-card==1.0.2
-streamlit-custom-notification-box==0.1.2
-streamlit-avatar==0.1.3
 
-# Other utilities
-requests
-beautifulsoup4
-lxml
-altair==5.5.0
-pydeck==0.9.1
+# Misc
 Faker==23.2.1
+requests
 validators
-
-# Optional data science tools
-joblib
-tqdm
-fastapi
-uvicorn
-pyyaml
-regex
