--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,7 @@
-# Core framework
-streamlit==1.45.1
-python-dotenv
-
-# Data science
+--only-binary=:all:
 numpy==1.26.4
-pandas==2.2.3
+pandas==2.2.2
 scikit-learn==1.4.2
-scipy==1.13.1
 matplotlib==3.8.4
 seaborn==0.13.2
-plotly==6.2.0
-
-# CV and Image support
-opencv-python==4.9.0.80
-Pillow==11.1.0
-
-# Streamlit add-ons
-streamlit-camera-input-live==0.2.0
-streamlit-drawable-canvas==0.9.3
-streamlit-image-coordinates==0.1.9
-streamlit-toggle-switch==1.0.2
-streamlit-extras==0.6.0
-streamlit-card==1.0.2
-
-# Misc
-Faker==23.2.1
-requests
-validators
+streamlit==1.35.0
